Fix vertical alignment

--- a/frontend/packages/employee-frontend/src/components/absences/Absences.scss
+++ b/frontend/packages/employee-frontend/src/components/absences/Absences.scss
@@ -22,6 +22,7 @@
     text-align: left;
     text-transform: uppercase;
     color: #6e6e6e;
+    vertical-align: bottom;
 
     &.absence-header {
       text-align: center;
